@@ -1,11 +1,14 @@
 package com.famvdploeg.aoc.day5;
 
 import com.famvdploeg.aoc.AbstractBaseTest;
+import com.famvdploeg.aoc.fn.Tuple;
 import com.famvdploeg.aoc.util.Resource;
 import com.famvdploeg.aoc.util.ResourceReader;
 import io.reactivex.rxjava3.core.Flowable;
 import io.reactivex.rxjava3.core.Observable;
 import lombok.extern.slf4j.Slf4j;
+import org.assertj.core.api.Assertions;
+import org.javatuples.Pair;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
@@ -22,20 +25,34 @@ public class Day5 extends AbstractBaseTest {
 
     @Test
     void partOne() {
-        this.stackCrates(true);
+        // execute
+        String result = this.stackCrates(true);
+
+        // verify
+        Assertions.assertThat(result)
+                .isEqualTo("CWMTGHBDW");
     }
 
     @Test
     void partTwo() {
-        this.stackCrates(false);
+        // execute
+        String result = this.stackCrates(false);
+
+        // verify
+        Assertions.assertThat(result)
+                .isEqualTo("SSCGWJCRB");
     }
 
-    private void stackCrates(boolean reverseCollection) {
+    private String stackCrates(boolean reverseCollection) {
         List<String> lines = ResourceReader.readResource("/input/day5/input.txt");
 
         List<String> cratesLines = lines.stream()
-                .takeWhile(line -> !line.trim().isEmpty())
+                .takeWhile(line -> !line.isBlank())
                 .collect(Collectors.toList());
+
+        List<String> operations = lines.stream()
+                .skip(cratesLines.size())
+                .toList();
 
         String nrStacksLine = cratesLines.remove(cratesLines.size() - 1);
         int nrStacks = Stream.of(nrStacksLine.split("\\s+"))
@@ -47,36 +64,30 @@ public class Day5 extends AbstractBaseTest {
         log.debug("Nr stacks: {}", nrStacks);
 
         Map<Integer, List<String>> stacks = new LinkedHashMap<>();
-        for (int i = 1; i <= nrStacks; i++) {
-            stacks.put(i, new ArrayList<>());
-        }
+        IntStream.rangeClosed(1, nrStacks)
+                .forEach(idx -> stacks.put(idx, new ArrayList<>()));
 
-        Pattern cratePattern = Pattern.compile("(\\s{3}|\\[\\w])");
-        for (String cratesLine : cratesLines) {
-            int idx = 0;
-            int searchIdx = 0;
-            Matcher m = cratePattern.matcher(cratesLine);
-            while (m.find(searchIdx)) {
-                idx++;
-                String crate = m.group(1);
-                searchIdx = Math.min(m.end() + 1, cratesLine.length() - 1);
-                if (crate.isBlank()) {
-                    continue;
-                }
-                log.debug("Crate: {}", crate);
-                stacks.get(idx)
-                        .add(crate);
-            }
-        }
+        final Pattern cratePattern = Pattern.compile("(\\s{3}|\\[\\w])\\s?");
+        Observable.fromIterable(cratesLines)
+                .doOnEach(val -> log.info("CrateLine: [{}]", val))
+                .map(cratePattern::matcher)
+                .switchMap(matcher -> functions.toMatches(matcher)
+                        .zipWith(
+                                Observable.range(1, nrStacks),
+                                (c, i) -> Pair.with(i, c))
+                        .filter(pair -> !pair.getValue1().isBlank())
+                ).subscribe(match -> {
+                    log.debug("Match: [{}]={}", match.getValue0(), match.getValue1());
+                    stacks.get(match.getValue0())
+                            .add(match.getValue1());
+                })
+                .dispose();
 
         stacks.forEach((key, value) -> {
             Collections.reverse(value);
             log.debug("Original: {}: {}", key, value);
         });
 
-        List<String> operations = lines.stream()
-                .skip(cratesLines.size() + 2) // 1 removed, 1 white line
-                .toList();
         Pattern opsPattern = Pattern.compile("move (\\d+) from (\\d+) to (\\d+)", Pattern.CASE_INSENSITIVE);
         for (String ops : operations) {
             if (ops.isBlank()) {
@@ -114,6 +125,9 @@ public class Day5 extends AbstractBaseTest {
                 .map(stack -> stack.get(stack.size() - 1))
                 .collect(Collectors.joining());
         combined = combined.replaceAll("[\\[\\]]", "");
+
         log.info("Result: {}", combined);
+
+        return combined;
     }
 }
